<resources>
    <string name="app_name">EPAY</string>
    <string name="admob_app_id">ca-app-pub-1567293172560219~1074425246</string>
    <string name="admob_rewarded_id">ca-app-pub-1567293172560219/5742645603</string>

    <string name="action_settings">Settings</string>
    <string name="impossible_game">Impossible Game</string>
    <string name="retry_button_text">Retry</string>
    <string name="watch_video_button_text">Watch Video for 10 additional coins</string>
    <string name="default_coin_text">Coins: 0</string>

    <string name="about_desc"> Please fill in the correct account information, or your withdrawal will be affected.</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="BtnPaymentText">Test payment</string>
    <string name="ImageDescription">Epay logo</string>
    <string name="LabelText">App Payment Example</string>
    <string name="LabelWarning">WARNING - This is a demo</string>
    <string name="title_activity_create_payment">Create test payment</string>
    <string name="SpinnerTextPromptCurrency">Select currency</string>
    <string name="SpinnerTextPromptLanguage">Select language</string>
    <string name="SpinnerTextPromptPaymentCollection">Select Paymentcollection</string>
    <string name="SpinnerTextPromptLockCollection">Select Lockcollection</string>
    <string name="BtnShowPaymentWindow">Create dummy payment</string>
    <string name="BtnGoToPayment">Go to payment</string>
    <string name="TestPaymentLabel">Select your test values below</string>

    <string-array name="searchWordsArray">
        <item>address</item>
        <item>bankId</item>
        <item>city</item>
        <item>bankBranch</item>
        <item>locationId</item>
        <item>bankBranchCode</item>
        <item>accountType</item>
        <item>country</item>
        <item>taxId</item>
        <item>area</item>
        <item>idType</item>
        <item>idNumber</item>
        <item>otherName</item>
        <item>nationality</item>
        <item>accountCountry</item>
        <item>bankBranchName</item>
        <item>tradingName</item>
        <item>zipCode</item>
        <item>states</item>
        <item>msisdn</item>
        <item>email</item>
        <item>registrationNumber</item>
        <item>dateOfIncorporation</item>
    </string-array>




</resources>