<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".epay.PaymentActivity" >

    <TextView
        android:id="@+id/textViewLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/TestPaymentLabel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="40sp" />

    <Spinner
        android:id="@+id/spinnerCurrency"
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:layout_gravity="fill_horizontal"
        android:prompt="@string/SpinnerTextPromptCurrency"
        android:spinnerMode="dialog"
        android:tag="spinnerCurrency"
        android:layout_marginBottom="20sp" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter Amount 1000"
        android:inputType="numberDecimal"
        android:layout_marginBottom="20sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextOrderID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter OrderID"
        android:inputType="text"
        android:layout_marginBottom="20sp" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/spinnerPaymentCollection"
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:layout_gravity="fill_horizontal"
        android:prompt="@string/SpinnerTextPromptPaymentCollection"
        android:spinnerMode="dialog"
        android:tag="spinnerpaymentcollection"
        android:layout_marginBottom="20sp" />

    <Spinner
        android:id="@+id/spinnerLockPaymentCollection"
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:layout_gravity="fill_horizontal"
        android:prompt="@string/SpinnerTextPromptLockCollection"
        android:spinnerMode="dialog"
        android:tag="spinnerlockpaymentcollection"
        android:layout_marginBottom="20sp" />

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:layout_gravity="fill_horizontal"
        android:prompt="@string/SpinnerTextPromptLanguage"
        android:spinnerMode="dialog"
        android:tag="spinnerlanguage"
        android:layout_marginBottom="20sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OpenPaymentWindow"
        android:text="@string/BtnGoToPayment" />

</LinearLayout>